commenting some unused code