@@ -6,10 +6,10 @@ import com.fireblocks.sdk.Fireblocks;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import java.nio.file.Paths;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
 
 @Configuration
 public class FireblockConfig {
@@ -17,18 +17,20 @@ public class FireblockConfig {
     @Value("${fireblock.api.key}")
     private String apiKey;
 
-    @Value("${fireblock.api.secret}")
-    private String secretKeyPath;
 
     @Value("${fireblock.env}")
     private String fireblocksEnv;
 
     @Bean
     public Fireblocks fireblocksClient() throws IOException {
-        String secretKeyParam = Files.readString(Path.of(secretKeyPath));
+        String privateKeyPem = new String(
+                Files.readAllBytes(
+                        Paths.get("src/main/resources/fireblocks_secret.key")
+                )
+        );
         ConfigurationOptions opts = new ConfigurationOptions()
                 .apiKey(apiKey)
-                .secretKey(secretKeyParam)
+                .secretKey(privateKeyPem)
                 .basePath(BasePath.Sandbox);
         return new Fireblocks(opts);
     }
